--- a/app/cadastro/style.css
+++ b/app/cadastro/style.css
@@ -14,6 +14,7 @@ body {
 }
 
 .form-container {
+  background-color: white; /* Fundo branco para o formulário */
   border-radius: 10px;
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
   padding: 20px;
@@ -33,6 +34,7 @@ body {
 label {
   display: block;
   margin-bottom: 5px;
+  font-weight: bold;
 }
 
 input {
@@ -42,9 +44,25 @@ input {
   border-radius: 4px;
 }
 
+p {
+  margin: 5px 0 0;
+  font-size: 14px;
+}
+
 .custom-button {
   width: 100%; /* Ou outra largura desejada */
   padding: 1rem; /* Ajuste conforme necessário */
   text-align: center;
+  background-color: #007bff;
+  color: white;
+  border: none;
+  font-size: 16px;
+  font-weight: bold;
   border-radius: 1.5rem; /* Para bordas arredondadas */
+  cursor: pointer;
+  transition: background-color 0.3s ease-in-out;
+}
+
+.custom-button:hover {
+  background-color: #0056b3;
 }
